tests/Core/negative/parsing/test014.jvc
letrec [a b']
  a := 0;
  b := 0;
in
a + b
